--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
@@ -67,4 +66,6 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true
+
+    
 }
