--- a/.env
+++ b/.env
@@ -12,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 
-# DB_DATABASE=demo_test
-DB_DATABASE=demo_test_none_rela
+DB_DATABASE=datn_test
+# DB_DATABASE=demo_test_none_rela
 
 DB_USERNAME=root
 DB_PASSWORD=
