--- a/.env
+++ b/.env
@@ -8,15 +8,20 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
 # DB_DATABASE=demo_test
-DB_DATABASE=demo_test_none_rela
+# DB_USERNAME=root
+# DB_PASSWORD=
 
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=210.211.125.205
+DB_PORT=3306
+DB_DATABASE=kgmeauoh_vnshop
+DB_USERNAME=kgmeauoh_vnshop
+DB_PASSWORD=U&&EIv[wzFWC
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -73,4 +78,8 @@ CLOUDINARY_CLOUD_NAME=dg5xvqt5i
 QUEUE_CONNECTION=database
 
 HERE_API_KEY=tQjvDyoWo92-0qxXD2j3tMeCFBWJtwI-GD4A7GJRzo4
+
+TOKEN_API_GIAO_HANG_NHANH=367180d5-7e0c-11ef-9c21-2ea71359104f
+
+TOKEN_API_REGISTER_GHN=44d7c8ce-78b3-11ea-a40c-e2394613f465
 
