--- a/.env
+++ b/.env
@@ -9,14 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=210.211.125.205
 DB_PORT=3306
-
-# DB_DATABASE=demo_test
-DB_DATABASE=demo_test_none_rela
-
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=kgmeauoh_vnshop
+DB_USERNAME=kgmeauoh_vnshop
+DB_PASSWORD=U&&EIv[wzFWC
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
